# RetinaFace_NCNN_Android_demo

./: README.md  pc_path.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: retinaface.cpp  retinaface.h  retinaface_jni.cpp
app/src/main/java/com/poya/retinaface/: MainActivity.java  RetinaFace.java
gradle/wrapper/: gradle-wrapper.properties
